angular material dialog

--- a/src/app/admin-create/admin-create.component.html
+++ b/src/app/admin-create/admin-create.component.html
@@ -4,19 +4,19 @@
             <form #guitar_form = "ngForm" (ngSubmit) = "createGuitar(guitar_form.value)">
                 <div class="for">
                     <label for="brand">Brand</label>
-                    <input type="text" name="brand"  class="form-control" ngModel>
+                    <input type="text" name="brand"  class="form-control" ngModel required>
                 </div>
                 <div>
                     <label for="model">Model</label>
-                    <input type="text" name="model"  class="form-control" ngModel>
+                    <input type="text" name="model"  class="form-control" ngModel required>
                 </div>
                 <div>
                     <label for="color">Color</label>
-                    <input type="text" name="color"  class="form-control" ngModel>
+                    <input type="text" name="color"  class="form-control" ngModel required>
                 </div>
                 <div>
                     <label for="hasCase">Has Case</label>
-                    <select name="hasCase"  class="form-control" ngModel>
+                    <select name="hasCase"  class="form-control" ngModel required>
                         <option value disabled>No option selected</option>
                         <option value="true">True</option>
                         <option value="false">False</option>
@@ -24,15 +24,15 @@
                 </div>
                 <div>
                     <label for="noOfStrings">Number of Strings</label>
-                    <input type="text" name="noOfStrings"  class="form-control" ngModel>
+                    <input type="text" name="noOfStrings"  class="form-control" ngModel required>
                 </div>
                 <div>
                     <label for="price">Price</label>
-                    <input type="number" min="1" name="price"  class="form-control" ngModel>
+                    <input type="number" min="1" name="price"  class="form-control" ngModel required>
                 </div>
                 <div>
                     <label for="type">Type</label>
-                    <select name="type"  class="form-control" ngModel>
+                    <select name="type"  class="form-control" ngModel required>
                         <option value disabled>No option selected</option>
                         <option value="electric">Electric</option>
                         <option value="classical">Classical</option>
@@ -43,7 +43,7 @@
                 </div>
                 <div>
                     <label for="img" >Image URL</label>
-                    <input type="text" name="img"  class="form-control" ngModel>
+                    <input type="text" name="img"  class="form-control" ngModel required>
                 </div>
                 <div>
                     <button type="submit" class='btn btn-primary'>Save</button>
