--- a/src/styles.css
+++ b/src/styles.css
@@ -11,15 +11,13 @@ body{
     background-attachment: fixed;
   background-position: center; 
   background-size: cover;
+  font-size: 20px;
  
   
 }
 
-/* html { 
-  background: url("assets/images/musicsheet.png") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
 
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
